# theory

./: .gitignore  README.md  contributors_guide.md  pyproject.toml
examples/: cancer_settings.ini  classification_cancer.py
tests/: test_dataset.py  test_idea.py  test_inventory.py  test_project.py  test_repository.py  test_simplify.py  tests.py
theory/: __init__.py  __main__.py  settings.py
theory/analyst/: __init__.py  algorithms.py  base.py  compare.py  components.py  encode.py  fill.py  mix.py  model.py  reduce.py  sample.py  scale.py  split.py
theory/artist/: __init__.py  algorithms.py  base.py  components.py
theory/core/: __init__.py  base.py  components.py  criteria.py  dataset.py  external.py  externals.py  framework.py  interface.py  quirks.py  stages.py
theory/critic/: __init__.py  algorithms.py  base.py  components.py
theory/explorer/: __init__.py  algorithms.py  base.py  components.py
theory/utilities/: __init__.py  decorators.py  tools.py
theory/wrangler/: __init__.py  algorithms.py  base.py  components.py
