[tool.poetry]
name = "theory"
version = "0.1.0"
description = "Flexible, accessible data science framework"
authors = ["Corey Rayburn Yung <coreyrayburnyung@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/WithPrecedent/theory"
repository = "https://github.com/WithPrecedent/theory"

[tool.poetry.dependencies]
python = "^3.9"
amos = "^0.1.5"
numpy = "^1.19.4"
pandas = "^1.1.5"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
plotly = "^4.14.1"
joblib = "^0.17.0"
seaborn = "^0.11.0"
scikit-learn = "^0.23.2"
category-encoders = "^2.2.2"
eli5 = "^0.10.1"
statsmodels = "^0.12.1"
imbalanced-learn = "^0.7.0"
mlxtend = "^0.18.0"
xgboost = "^1.3.0"
scikit-optimize = "^0.8.1"
sympy = "^1.7"
yellowbrick = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
