[tool.poetry]
name = "theory"
version = "0.1.1"
description = "Data science made simple"
authors = ["Corey Rayburn Yung <coreyrayburnyung@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/WithPrecedent/theory"
repository = "https://github.com/WithPrecedent/theory"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.3"
pandas = "^1.5.0"
scipy = "^1.9.1"
matplotlib = "^3.6.0"
plotly = "^5.10.0"
joblib = "^1.2.0"
seaborn = "^0.12.0"
scikit-learn = "^1.1.2"
category-encoders = "^2.5.0"
eli5 = "^0.13.0"
statsmodels = "^0.13.2"
imbalanced-learn = "^0.9.1"
mlxtend = "^0.21.0"
xgboost = "^1.6.2"
scikit-optimize = "^0.9.0"
yellowbrick = "^1.5"
shap = "^0.41.0"
amos = "^0.1.10"
bobbie = "0.1.1"
chrisjen = "0.1.2"
holden = "^0.1.4"
miller = "^0.1.4"
nagata = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
